# RayTracerCPU

./: .gitignore  .gitmodules  LICENSE
3D_render/: CMakeLists.txt  CMakeSettings.json
3D_render/resources/blender/: Daftpunk.mtl  donut.mtl  donut.ply  donutTop.ply
3D_render/src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map2d.cpp  Map2d.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  PathFinder.h  Pathfinder.cpp  Player.cpp  Player.h  Shader.cpp  Shader.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h  UtilityFunctions.cpp  UtilityFunctions.h  main.cpp
3D_render/src/shaders/: fragmentColourShader.frag  fragmentShader.frag  vertexShader.vert
Game/: Game.cpp  Game.hpp  Game.sln  Game.vcxproj  Game.vcxproj.filters  GameObject.cpp  GameObject.h  Pong.vcxproj  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.hpp  main.cpp
Game/Game/: CMakeLists.txt  CMakeSettings.json
Game/Game/resources/platformer/: adventurer.json  map.mp  map1.json  nature-platformer-tileset-16x16.json
Game/Game/src/: Entity.cpp  Entity.h  Game.cpp  Game.h  GameObject.cpp  ObjectManager.cpp  ObjectManager.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Timer.cpp  Timer.h
Game/src/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  ObjectManager.cpp  ObjectManager.h  SpriteSheet.cpp  Texture.cpp  Texture.h  main.cpp
Pong/: Game.cpp  Game.hpp  Game.sln  GameObject.cpp  GameObject.h  Pong.cpp  Pong.hpp  Pong.sln  Pong.vcxproj  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.hpp  main.cpp
rayTracer/: .directory  .gitignore  CMakeLists.txt  CMakeSettings.json  dragon.ppm  index.html  test.txt
rayTracer/assets/scenes/: boundingBoxes.yaml  christmas.yaml  cornellbox.yaml  coverScene.yaml  cylinders.yaml  globe.yaml  groups.yaml  hippy.yaml  model.yaml  reflectionScene.yaml  scene.yaml  skybox.yaml  table.yaml  triangleScene.yaml
rayTracer/include/: SimplexNoise.cpp  concurrentqueue.h  stb_image.h
rayTracer/scenes/: checkers.yaml  coverScene.yaml  globe.yaml  groups.yaml  hippy.yaml  reflectionScene.yaml  shadowPuppets.yaml  skybox.yaml
rayTracer/simplexNoise/: SimplexNoise.h
rayTracer/src/: CMakeLists.txt  VulkanInitialiser.cpp  VulkanInitialiser.h  camera.cpp  camera.h  canvas.cpp  canvas.h  cone.cpp  cone.h  coverScene.yaml  cube.cpp  cube.h  cylinder.cpp  cylinder.h  emscriptenRunner.cpp  emscriptenRunner.h  environment.cpp  environment.h  firBranch.cpp  firBranch.h  geometry.cpp  geometry.h  group.cpp  group.h  intersection.cpp  intersection.h  main.cpp  material.cpp  material.h  model.cpp  model.h  objectLoader.cpp  objectLoader.h  pattern.cpp  pattern.h  patterns.cpp  patterns.h  plane.cpp  plane.h  pointLight.cpp  (+29 more)
rayTracer/src/archive/: environment.cpp  environment.h  main.cpp  projectile.cpp
rayTracer/src/raytracer/: CMakeLists.txt  api.cpp  camera.cpp  camera.h  canvas.cpp  canvas.h  cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  firBranch.cpp  firBranch.h  geometry.cpp  geometry.h  group.cpp  group.h  material.cpp  material.h  model.cpp  model.h  objectLoader.cpp  objectLoader.h  pattern.cpp  pattern.h  patterns.cpp  patterns.h  plane.cpp  plane.h  pointLight.cpp  pointLight.h  ray.cpp  ray.h  renderer.cpp  renderer.h  serialisation.h  shape.cpp  shape.h  smoothTriangle.cpp  (+13 more)
rayTracer/src/runner/: CMakeLists.txt  emscriptenRunner.cpp  emscriptenRunner.h  main.cpp  window.cpp  window.h
rayTracer/tests/: CMakeLists.txt  canvasTests.cpp  testUtils.h  tupleTests.cpp
